--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aws-sdk-s3-sync",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "aws s3 sync s3://<bucket>/<folder> s3://<bucket>/<folder> without aws-cli",
   "main": "index.js",
   "repository": "https://github.com/guerrerocarlos/aws-cli-s3-sync.git",
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "aws-sdk": "^2.628.0",
+    "mime-types": "^2.1.26",
     "p-throttle": "^3.1.0"
   }
 }
